--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -55,7 +55,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url(../assets/images/sunset.png);
+        background-image: url(assets/images/sunset.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
