--- a/css/style.css
+++ b/css/style.css
@@ -1194,6 +1194,7 @@ footer {
   background-color: #131518;
 }
 footer .breadth .map {
+  filter: grayscale(100%);
   width: 100%;
   height: 500px;
   margin-bottom: 20px;
