--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -6,6 +6,7 @@ footer {
     background-color: #131518;
     .breadth{
         .map{
+            filter: grayscale(100%); 
             width: 100%;
             height: 500px;
             margin-bottom: 20px;
