--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -2,7 +2,9 @@ body {
     font-size: 62.5%;
     font-family: "Zen Old Mincho", serif;
     color: white;
-    background-color: black;
+    background:url(../assets/images/japanese-paper_00334.jpg) ;
+    background-color: rgba(0, 0, 0, 0.7); 
+    background-blend-mode: overlay;
 }
 
 .breadth {
